Summary StepWhatWhere1Replace progress tracker CSSLines ~2199-2280 (before /* Card Badges */)2Remove old progress tracker HTMLLines ~3001-3028 (delete entire block, keep <!-- Documented Results -->)3Add floating widget HTMLRight before </body> at end of file
Summary
StepWhatWhere1Replace progress tracker CSSLines ~2199-2280 (before /* Card Badges */)2Remove old progress tracker HTMLLines ~3001-3028 (delete entire block, keep <!-- Documented Results -->)3Add floating widget HTMLRight before </body> at end of file

--- a/index.html
+++ b/index.html
@@ -2196,89 +2196,104 @@
         grid-template-columns: 1fr;
       }
     }
-/* ========== PROGRESS TRACKER & CARD BADGES ========== */
-.progress-tracker {
-  background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
-  border: 1px solid #bae6fd;
+/* ========== FLOATING PROGRESS WIDGET (Top-Right) ========== */
+.progress-widget {
+  position: fixed;
+  top: 5rem;
+  right: 1.5rem;
+  z-index: 999;
+  background: white;
   border-radius: 12px;
-  padding: 1rem 1.5rem;
-  margin-bottom: 2rem;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-}
-.progress-stats {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  flex-wrap: wrap;
-}
-.progress-stat {
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
-  font-size: 0.9rem;
-  color: #1e3a5f;
-}
-.progress-stat .count {
-  font-weight: 700;
-  color: #1E40AF;
-}
-.progress-stat.viewed .count { color: #059669; }
-.progress-stat.bookmarked .count { color: #d97706; }
-.progress-stat.notes .count { color: #6366f1; }
-.progress-stat svg {
-  width: 16px;
-  height: 16px;
-}
-.progress-stat.viewed svg { color: #059669; }
-.progress-stat.bookmarked svg { color: #d97706; }
-.progress-stat.notes svg { color: #6366f1; }
-.progress-actions {
-  display: flex;
-  gap: 0.75rem;
-  align-items: center;
-}
-.progress-btn {
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.12), 0 0 0 1px rgba(0,0,0,0.05);
+  padding: 0.75rem 1rem;
   font-size: 0.8rem;
-  font-weight: 600;
+  min-width: 160px;
+}
+.progress-widget-stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 1rem;
+  margin-bottom: 0.6rem;
+}
+.progress-widget-stat {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: #6b7280;
+}
+.progress-widget-stat svg {
+  width: 14px;
+  height: 14px;
+}
+.progress-widget-stat .num {
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+.progress-widget-stat.viewed svg { color: #059669; }
+.progress-widget-stat.viewed .num { color: #059669; }
+.progress-widget-stat.bookmarked svg { color: #d97706; }
+.progress-widget-stat.bookmarked .num { color: #d97706; }
+.progress-widget-stat.notes svg { color: #6366f1; }
+.progress-widget-stat.notes .num { color: #6366f1; }
+.progress-widget-actions {
+  display: flex;
+  gap: 0.4rem;
+  padding-top: 0.6rem;
+  border-top: 1px solid #e5e7eb;
+}
+.progress-widget-actions button {
+  flex: 1;
+  padding: 0.4rem 0.5rem;
+  border-radius: 6px;
+  font-size: 0.7rem;
+  font-weight: 500;
   cursor: pointer;
   border: none;
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
   transition: all 0.2s;
 }
-.progress-btn svg { width: 14px; height: 14px; }
-.progress-btn.secondary {
-  background: white;
-  color: #374151;
-  border: 1px solid #d1d5db;
-}
-.progress-btn.secondary:hover { background: #f3f4f6; }
-.progress-btn.primary {
+.progress-widget-actions .primary {
   background: linear-gradient(135deg, #1E40AF 0%, #0D9488 100%);
   color: white;
 }
-.progress-btn.primary:hover { 
+.progress-widget-actions .primary:hover {
   transform: translateY(-1px);
   box-shadow: 0 2px 8px rgba(30,64,175,0.3);
 }
-.progress-reset {
-  font-size: 0.75rem;
-  color: #6b7280;
-  cursor: pointer;
-  text-decoration: underline;
+.progress-widget-actions .secondary {
+  background: #f3f4f6;
+  color: #374151;
+}
+.progress-widget-actions .secondary:hover {
+  background: #e5e7eb;
+}
+.progress-widget-reset {
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-top: 0.5rem;
+  font-size: 0.65rem;
+  color: #9ca3af;
   background: none;
   border: none;
+  cursor: pointer;
+  text-decoration: underline;
 }
-.progress-reset:hover { color: #374151; }
+.progress-widget-reset:hover {
+  color: #6b7280;
+}
 
-/* Card Badges */
+@media (max-width: 768px) {
+  .progress-widget {
+    top: 4.5rem;
+    right: 1rem;
+    padding: 0.6rem 0.8rem;
+    min-width: 140px;
+  }
+  .progress-widget-stats {
+    gap: 0.6rem;
+  }
+}/* Card Badges */
 .card-badges {
   position: absolute;
   top: 0.75rem;
@@ -2996,35 +3011,6 @@
           <h2 class="section-title">Case Studies</h2>
         </div>
 </div>
-
-        <!-- Progress Tracker -->
-        <div class="progress-tracker" id="progressTracker">
-          <div class="progress-stats">
-            <div class="progress-stat viewed">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg>
-              <span><span class="count" id="viewedCount">0</span> viewed</span>
-            </div>
-            <div class="progress-stat bookmarked">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg>
-              <span><span class="count" id="bookmarkedCount">0</span> bookmarked</span>
-            </div>
-            <div class="progress-stat notes">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/></svg>
-              <span><span class="count" id="notesCount">0</span> with notes</span>
-            </div>
-          </div>
-          <div class="progress-actions">
-            <button class="progress-btn secondary" onclick="exportAllNotes()">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
-              Export Notes
-            </button>
-            <button class="progress-btn primary" onclick="sendAllNotes()">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg>
-              Send to Christie
-            </button>
-            <button class="progress-reset" onclick="resetAllProgress()">Reset</button>
-          </div>
-        </div>
         <!-- Documented Results -->
         <div class="stats-cards">
           <div class="stat-item" data-highlights="xacteched">
@@ -4175,5 +4161,27 @@ document.addEventListener('DOMContentLoaded', function() {
   updateAllUI();
 });
 </script>
+<!-- ========== FLOATING PROGRESS WIDGET ========== -->
+<div class="progress-widget" id="progressWidget">
+  <div class="progress-widget-stats">
+    <div class="progress-widget-stat viewed">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg>
+      <span class="num" id="viewedCount">0</span>
+    </div>
+    <div class="progress-widget-stat bookmarked">
+      <svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg>
+      <span class="num" id="bookmarkedCount">0</span>
+    </div>
+    <div class="progress-widget-stat notes">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/></svg>
+      <span class="num" id="notesCount">0</span>
+    </div>
+  </div>
+  <div class="progress-widget-actions">
+    <button class="secondary" onclick="exportAllNotes()">Export</button>
+    <button class="primary" onclick="sendAllNotes()">Send</button>
+  </div>
+  <button class="progress-widget-reset" onclick="resetAllProgress()">Reset</button>
+</div>
 </body>
 </html>
