--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,7 @@
 .card-badges {
   position: absolute;
   top: 0.75rem;
-  right: 0.75rem;
+  left: 0.75rem;
   display: flex;
   gap: 0.4rem;
   z-index: 10;
