Quick Checklist   Edit 1: .progress-widget → right to left  Edit 2: .sticky-widget → right to left  Edit 3: .card-badge → 28px to 21px (both width and height)  Edit 4: .card-badge svg → 14px to 10px (both width and height)
Quick Checklist

 Edit 1: .progress-widget → right to left
 Edit 2: .sticky-widget → right to left
 Edit 3: .card-badge → 28px to 21px (both width and height)
 Edit 4: .card-badge svg → 14px to 10px (both width and height)

--- a/index.html
+++ b/index.html
@@ -2200,7 +2200,7 @@
 .progress-widget {
   position: fixed;
   top: 5rem;
-  right: 1.5rem;
+  left: 1.5rem;
   z-index: 999;
   background: white;
   border-radius: 12px;
@@ -2303,8 +2303,8 @@
   z-index: 10;
 }
 .card-badge {
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -2315,8 +2315,8 @@
   box-shadow: 0 2px 8px rgba(0,0,0,0.15);
 }
 .card-badge svg {
-  width: 14px;
-  height: 14px;
+  width: 9px;
+  height: 9px;
 }
 .card-badge.viewed {
   background: #059669;
@@ -2412,7 +2412,7 @@
 .sticky-widget {
   position: fixed;
   bottom: 2rem;
-  right: 2rem;
+  left: 2rem;
   z-index: 9999;
   font-family: 'IBM Plex Sans', sans-serif;
 }
