Change flex-wrap: wrap; to flex-wrap: nowrap;: css.case-study-meta {   display: flex;   align-items: center;   gap: 0.5rem;   margin-bottom: 0.75rem;   flex-wrap: nowrap; }
Change flex-wrap: wrap; to flex-wrap: nowrap;:
css.case-study-meta {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-bottom: 0.75rem;
  flex-wrap: nowrap;
}

--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
       align-items: center;
       gap: 0.5rem;
       margin-bottom: 0.75rem;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
     }
 
     .case-study-role {
