--- a/healthcare-dashboard.html
+++ b/healthcare-dashboard.html
@@ -956,5 +956,15 @@ document.addEventListener('DOMContentLoaded', function() {
   updateNoteCounts();
 });
 </script>
+<script>
+// Auto-mark this page as viewed
+(function() {
+  const PROJECT_ID = 'dashboard';
+  const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
+  data[PROJECT_ID] = data[PROJECT_ID] || { viewed: false, bookmarked: false, note: '' };
+  data[PROJECT_ID].viewed = true;
+  localStorage.setItem('portfolioTracking', JSON.stringify(data));
+})();
+</script>
 </body>
 </html>
