Summary:  CSS fix for role crowding (one edit to index.html)
Summary:

CSS fix for role crowding (one edit to index.html)

--- a/index.html
+++ b/index.html
@@ -1232,13 +1232,17 @@
       flex-wrap: nowrap;
     }
 
-    .case-study-role {
-      font-size: 0.7rem;
-      font-weight: 600;
-      letter-spacing: 0.05em;
-      text-transform: uppercase;
-      color: var(--color-accent);
-    }
+   .case-study-role {
+  font-size: 0.7rem;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--color-accent);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
 
     .case-study-org {
       font-size: 0.75rem;
