--- a/index.html
+++ b/index.html
@@ -4023,7 +4023,7 @@ function updateCardBadges() {
 // ===== PROGRESS TRACKER =====
 function updateProgressTracker() {
   const data = getAllData();
-  const projectIds = ['dashboard', 'xacteched', 'resolute', 'arizona', 'palmview', 'gardner'];
+ const projectIds = ['portfolio-home', 'dashboard', 'xacteched', 'resolute', 'arizona', 'palmview', 'gardner'];
   
   let viewed = 0, bookmarked = 0, withNotes = 0;
   
