--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -1475,5 +1475,14 @@ document.addEventListener('DOMContentLoaded', function() {
   updateNoteCounts();
 });
 </script>
+<script>
+(function() {
+  const PROJECT_ID = 'xacteched';
+  const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
+  data[PROJECT_ID] = data[PROJECT_ID] || { viewed: false, bookmarked: false, note: '' };
+  data[PROJECT_ID].viewed = true;
+  localStorage.setItem('portfolioTracking', JSON.stringify(data));
+})();
+</script>
 </body>
 </html>
