--- a/index.html
+++ b/index.html
@@ -2465,7 +2465,7 @@
   right: 100%;
   top: 50%;
   transform: translateY(-50%);
-  margin-right: 0.75rem;
+  margin-left: 0.75rem;
   background: #1C1917;
   color: white;
   padding: 0.5rem 0.75rem;
@@ -2486,7 +2486,7 @@
   top: 50%;
   transform: translateY(-50%);
   border: 6px solid transparent;
-  border-left-color: #1C1917;
+  border-right-color: #1C1917;
 }
 
 /* Expanded State - Full sticky note */
