--- a/index.html
+++ b/index.html
@@ -2462,7 +2462,7 @@
 }
 .sticky-minimized .tooltip {
   position: absolute;
-  right: 100%;
+  left: 100%;
   top: 50%;
   transform: translateY(-50%);
   margin-left: 0.75rem;
@@ -2482,7 +2482,7 @@
 .sticky-minimized .tooltip::after {
   content: '';
   position: absolute;
-  left: 100%;
+  right: 100%;
   top: 50%;
   transform: translateY(-50%);
   border: 6px solid transparent;
@@ -2830,6 +2830,11 @@
   border-radius: 8px;
   border-left: 3px solid #d97706;
 }
+.notes-hint:hover {
+  background: linear-gradient(135deg, rgba(217, 119, 6, 0.15) 0%, rgba(245, 158, 11, 0.15) 100%);
+  transform: translateX(4px);
+  transition: all 0.2s ease;
+}
 .notes-hint svg {
   width: 16px;
   height: 16px;
@@ -3105,10 +3110,10 @@
           <div class="section-label">Featured Work</div>
           <h2 class="section-title">Case Studies</h2>
 <h2 class="section-title">Case Studies</h2>
-          <div class="notes-hint">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg>
-            <span>Bookmark and take notes on any project</span>
-          </div>
+        <div class="notes-hint" onclick="highlightNotesWidget()" style="cursor: pointer;">
+  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg>
+  <span>Bookmark and take notes on any project</span>
+</div>
         </div>
         </div>
         <!-- Documented Results -->
@@ -4281,7 +4286,24 @@ function initNotesDiscovery() {
     }, 2000);
   }
 }
-
+function highlightNotesWidget() {
+  const stickyWidget = document.getElementById('stickyWidget');
+  if (stickyWidget) {
+    // Add pulse effect
+    stickyWidget.classList.add('pulse');
+    
+    // Scroll to bottom-left where widget is
+    window.scrollTo({
+      top: document.body.scrollHeight,
+      behavior: 'smooth'
+    });
+    
+    // Remove pulse after 3 seconds
+    setTimeout(() => {
+      stickyWidget.classList.remove('pulse');
+    }, 3000);
+  }
+}
 function dismissTooltip() {
   const tooltip = document.getElementById('notesTooltip');
   if (tooltip) {
