--- a/index.html
+++ b/index.html
@@ -2835,6 +2835,51 @@
   transform: translateX(4px);
   transition: all 0.2s ease;
 }
+/* RGB Ring + Bounce Effect for Notes Widget */
+.sticky-widget.highlight .sticky-minimized {
+  animation: bounce 0.6s ease infinite;
+}
+
+.sticky-widget.highlight .sticky-minimized::before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  right: -6px;
+  bottom: -6px;
+  border-radius: 50%;
+  background: conic-gradient(
+    #ff0000, #ff8000, #ffff00, #80ff00, 
+    #00ff00, #00ff80, #00ffff, #0080ff,
+    #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000
+  );
+  z-index: -1;
+  animation: rgbSpin 1s linear infinite;
+}
+
+.sticky-widget.highlight .sticky-minimized::after {
+  content: '';
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  right: -3px;
+  bottom: -3px;
+  border-radius: 50%;
+  background: #FDFCFA;
+  z-index: -1;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  25% { transform: translateY(-12px); }
+  50% { transform: translateY(0); }
+  75% { transform: translateY(-6px); }
+}
+
+@keyframes rgbSpin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
 .notes-hint svg {
   width: 16px;
   height: 16px;
@@ -4288,12 +4333,12 @@ function initNotesDiscovery() {
 function highlightNotesWidget() {
   const stickyWidget = document.getElementById('stickyWidget');
   if (stickyWidget) {
-    // Add pulse effect to draw attention
-    stickyWidget.classList.add('pulse');
+    // Add RGB ring + bounce effect
+    stickyWidget.classList.add('highlight');
     
-    // Remove pulse after 3 seconds
+    // Remove after 3 seconds
     setTimeout(() => {
-      stickyWidget.classList.remove('pulse');
+      stickyWidget.classList.remove('highlight');
     }, 3000);
   }
 }
