--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -206,10 +206,10 @@
 }
 .sticky-minimized .tooltip {
   position: absolute;
-  right: 100%;
+  left: 100%;
   top: 50%;
   transform: translateY(-50%);
-  margin-right: 0.75rem;
+  margin-left: 0.75rem;
   background: #1C1917;
   color: white;
   padding: 0.5rem 0.75rem;
@@ -232,7 +232,6 @@
   border: 6px solid transparent;
   border-left-color: #1C1917;
 }
-
 /* Expanded State - Full sticky note */
 .sticky-expanded {
   width: 320px;
@@ -981,9 +980,20 @@
   </div>
 </div>
 <script>
+<script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
 const CURRENT_PAGE_KEY = 'xacteched';
 const CURRENT_PAGE_NAME = 'XactechED Campaign';
+
+const PROJECT_NAMES = {
+  'portfolio-home': 'Christie Saavedra Portfolio',
+  'dashboard': 'Healthcare Operations Dashboard',
+  'xacteched': 'XactechED Campaign',
+  'resolute': 'Resolute Services',
+  'arizona': 'Arizona Esthetics Institute',
+  'palmview': 'Palmview Lab',
+  'gardner': 'Gardner Chiropractic'
+};
 
 function expandWidget() {
   document.getElementById('stickyWidget').classList.remove('minimized');
@@ -1015,26 +1025,26 @@ function showTab(tab) {
   }
 }
 
-function getAllNotes() {
-  const notes = localStorage.getItem('portfolioNotes');
-  return notes ? JSON.parse(notes) : {};
+function getAllData() {
+  const data = localStorage.getItem('portfolioTracking');
+  return data ? JSON.parse(data) : {};
+}
+
+function getProjectData(projectId) {
+  const data = getAllData();
+  return data[projectId] || { viewed: false, bookmarked: false, note: '' };
 }
 
 function saveNote() {
   const textarea = document.getElementById('noteTextarea');
-  const notes = getAllNotes();
+  const data = getAllData();
   
-  if (textarea.value.trim()) {
-    notes[CURRENT_PAGE_KEY] = {
-      name: CURRENT_PAGE_NAME,
-      text: textarea.value,
-      updated: new Date().toISOString()
-    };
-  } else {
-    delete notes[CURRENT_PAGE_KEY];
+  if (!data[CURRENT_PAGE_KEY]) {
+    data[CURRENT_PAGE_KEY] = { viewed: true, bookmarked: false, note: '' };
   }
   
-  localStorage.setItem('portfolioNotes', JSON.stringify(notes));
+  data[CURRENT_PAGE_KEY].note = textarea.value;
+  localStorage.setItem('portfolioTracking', JSON.stringify(data));
   updateNoteCounts();
   
   const status = document.getElementById('saveStatus');
@@ -1043,19 +1053,23 @@ function saveNote() {
 }
 
 function updateNoteCounts() {
-  const notes = getAllNotes();
-  const count = Object.keys(notes).length;
+  const data = getAllData();
+  const projectsWithNotes = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
+  const count = projectsWithNotes.length;
+  
   document.getElementById('noteCount').textContent = count;
   document.getElementById('allNotesCount').textContent = count;
   
   const tooltip = document.querySelector('.sticky-minimized .tooltip');
-  tooltip.textContent = count > 0 ? `My Notes (${count} project${count > 1 ? 's' : ''})` : 'My Notes';
+  if (tooltip) {
+    tooltip.textContent = count > 0 ? `My Notes (${count} project${count > 1 ? 's' : ''})` : 'My Notes';
+  }
 }
 
 function renderAllNotes() {
-  const notes = getAllNotes();
+  const data = getAllData();
   const container = document.getElementById('allNotesList');
-  const keys = Object.keys(notes);
+  const keys = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
   
   if (keys.length === 0) {
     container.innerHTML = `
@@ -1071,15 +1085,16 @@ function renderAllNotes() {
   }
   
   container.innerHTML = keys.map(key => {
-    const note = notes[key];
-    const preview = note.text.length > 50 ? note.text.substring(0, 50) + '...' : note.text;
+    const project = data[key];
+    const name = PROJECT_NAMES[key] || key;
+    const preview = project.note.length > 50 ? project.note.substring(0, 50) + '...' : project.note;
     return `
       <div class="sticky-note-item" onclick="goToProject('${key}')">
         <div class="sticky-note-item-title">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
           </svg>
-          ${note.name}
+          ${name}
         </div>
         <div class="sticky-note-item-preview">${preview}</div>
       </div>
@@ -1090,10 +1105,10 @@ function renderAllNotes() {
 function goToProject(key) {
   const pageMap = {
     'portfolio-home': 'index.html',
-    'healthcare-dashboard': 'healthcare-dashboard.html',
+    'dashboard': 'healthcare-dashboard.html',
     'xacteched': 'xacteched-campaign.html',
     'resolute': 'resolute-services.html',
-    'arizona-esthetics': 'arizona-esthetics.html',
+    'arizona': 'arizona-esthetics.html',
     'palmview': 'palmview-lab.html',
     'gardner': 'gardner-chiropractic.html'
   };
@@ -1103,8 +1118,9 @@ function goToProject(key) {
 }
 
 function exportNotes() {
-  const notes = getAllNotes();
-  const keys = Object.keys(notes);
+  const data = getAllData();
+  const keys = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
+  
   if (keys.length === 0) {
     alert('No notes to export yet!');
     return;
@@ -1113,9 +1129,9 @@ function exportNotes() {
   let text = 'PORTFOLIO NOTES - Christie Saavedra\n';
   text += '================================\n\n';
   keys.forEach(key => {
-    const note = notes[key];
-    text += `📌 ${note.name}\n`;
-    text += `${note.text}\n\n`;
+    const name = PROJECT_NAMES[key] || key;
+    text += `📌 ${name}\n`;
+    text += `${data[key].note}\n\n`;
   });
   
   const blob = new Blob([text], { type: 'text/plain' });
@@ -1128,8 +1144,9 @@ function exportNotes() {
 }
 
 function sendNotes() {
-  const notes = getAllNotes();
-  const keys = Object.keys(notes);
+  const data = getAllData();
+  const keys = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
+  
   if (keys.length === 0) {
     alert('No notes to send yet!');
     return;
@@ -1137,8 +1154,8 @@ function sendNotes() {
   
   let message = 'Portfolio Notes:\n\n';
   keys.forEach(key => {
-    const note = notes[key];
-    message += `${note.name}:\n${note.text}\n\n`;
+    const name = PROJECT_NAMES[key] || key;
+    message += `${name}:\n${data[key].note}\n\n`;
   });
   
   const form = document.createElement('form');
@@ -1163,11 +1180,10 @@ function sendNotes() {
   document.body.removeChild(form);
 }
 
-// Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
-  const notes = getAllNotes();
-  if (notes[CURRENT_PAGE_KEY]) {
-    document.getElementById('noteTextarea').value = notes[CURRENT_PAGE_KEY].text;
+  const projectData = getProjectData(CURRENT_PAGE_KEY);
+  if (projectData.note) {
+    document.getElementById('noteTextarea').value = projectData.note;
   }
   updateNoteCounts();
 });
