--- a/healthcare-dashboard.html
+++ b/healthcare-dashboard.html
@@ -150,10 +150,10 @@
 }
 .sticky-minimized .tooltip {
   position: absolute;
-  right: 100%;
+  left: 100%;
   top: 50%;
   transform: translateY(-50%);
-  margin-right: 0.75rem;
+  margin-left: 0.75rem;
   background: #1C1917;
   color: white;
   padding: 0.5rem 0.75rem;
@@ -170,13 +170,12 @@
 .sticky-minimized .tooltip::after {
   content: '';
   position: absolute;
-  left: 100%;
+  right: 100%;
   top: 50%;
   transform: translateY(-50%);
   border: 6px solid transparent;
-  border-left-color: #1C1917;
+  border-right-color: #1C1917;
 }
-
 /* Expanded State - Full sticky note */
 .sticky-expanded {
   width: 320px;
@@ -766,8 +765,18 @@
 </div>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'dashboard';
-const CURRENT_PAGE_NAME = 'Healthcare Operations Dashboard';
+const CURRENT_PAGE_KEY = 'xacteched';
+const CURRENT_PAGE_NAME = 'XactechED Campaign';
+
+const PROJECT_NAMES = {
+  'portfolio-home': 'Christie Saavedra Portfolio',
+  'dashboard': 'Healthcare Operations Dashboard',
+  'xacteched': 'XactechED Campaign',
+  'resolute': 'Resolute Services',
+  'arizona': 'Arizona Esthetics Institute',
+  'palmview': 'Palmview Lab',
+  'gardner': 'Gardner Chiropractic'
+};
 
 function expandWidget() {
   document.getElementById('stickyWidget').classList.remove('minimized');
@@ -825,6 +834,7 @@ function saveNote() {
   status.classList.add('visible');
   setTimeout(() => status.classList.remove('visible'), 2000);
 }
+
 function updateNoteCounts() {
   const data = getAllData();
   const projectsWithNotes = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
@@ -838,15 +848,6 @@ function updateNoteCounts() {
     tooltip.textContent = count > 0 ? `My Notes (${count} project${count > 1 ? 's' : ''})` : 'My Notes';
   }
 }
-const PROJECT_NAMES = {
-  'portfolio-home': 'Christie Saavedra Portfolio',
-  'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
-  'resolute': 'Resolute Services',
-  'arizona': 'Arizona Esthetics Institute',
-  'palmview': 'Palmview Lab',
-  'gardner': 'Gardner Chiropractic'
-};
 
 function renderAllNotes() {
   const data = getAllData();
@@ -898,6 +899,7 @@ function goToProject(key) {
     window.location.href = pageMap[key];
   }
 }
+
 function exportNotes() {
   const data = getAllData();
   const keys = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
@@ -923,6 +925,7 @@ function exportNotes() {
   a.click();
   URL.revokeObjectURL(url);
 }
+
 function sendNotes() {
   const data = getAllData();
   const keys = Object.keys(data).filter(key => data[key].note && data[key].note.trim());
@@ -960,14 +963,14 @@ function sendNotes() {
   document.body.removeChild(form);
 }
 
-// Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
   const projectData = getProjectData(CURRENT_PAGE_KEY);
   if (projectData.note) {
     document.getElementById('noteTextarea').value = projectData.note;
   }
   updateNoteCounts();
-});</script>
+});
+</script>
 <script>
 // Auto-mark this page as viewed
 (function() {
