notes saved from page to page
notes saved from page to page

--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -766,6 +766,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 <script>
+// Auto-mark this page as viewed
 (function() {
   const PROJECT_ID = 'arizona';
   const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
