--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -865,7 +865,9 @@ document.addEventListener('DOMContentLoaded', function() {
   }
   updateNoteCounts();
 });
-</script><script>
+</script>
+<script>
+// Auto-mark this page as viewed
 (function() {
   const PROJECT_ID = 'gardner';
   const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
