--- a/resolute-services.html
+++ b/resolute-services.html
@@ -831,6 +831,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 <script>
+// Auto-mark this page as viewed
 (function() {
   const PROJECT_ID = 'resolute';
   const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
