--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -1492,6 +1492,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 <script>
+// Auto-mark this page as viewed
 (function() {
   const PROJECT_ID = 'xacteched';
   const data = JSON.parse(localStorage.getItem('portfolioTracking') || '{}');
