arizona-esthetics.html - line 109: right: 2rem → left: 2rem  palmview-lab.html - line 108: right: 2rem → left: 2rem  resolute-services.html - line 110: right: 2rem → left: 2rem  xacteched-campaign.html - line 163: right: 2rem → left: 2rem  gardner-chiropractic.html - (upload and fix)
 arizona-esthetics.html - line 109: right: 2rem → left: 2rem
 palmview-lab.html - line 108: right: 2rem → left: 2rem
 resolute-services.html - line 110: right: 2rem → left: 2rem
 xacteched-campaign.html - line 163: right: 2rem → left: 2rem
 gardner-chiropractic.html - (upload and fix)

--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -106,7 +106,7 @@
 .sticky-widget {
   position: fixed;
   bottom: 2rem;
-  right: 2rem;
+  left: 2rem;
   z-index: 9999;
   font-family: 'IBM Plex Sans', sans-serif;
 }
