--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -138,7 +138,7 @@
     .footer-nav a { color: var(--color-text-secondary); text-decoration: none; font-size: 0.9rem; }
     .footer-nav a:hover { color: var(--color-text); }
     .footer-copyright { font-size: 0.85rem; color: var(--color-text-secondary); }
-    .back-to-top { position: fixed; bottom: 2rem; right: 2rem; width: 44px; height: 44px; background: white; border: 1px solid #e7e5e4; border-radius: 50%; cursor: pointer; opacity: 0; visibility: hidden; transition: all 0.3s; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 100; }
+    .back-to-top { position: fixed; bottom: 2rem; right: 2rem; width: 44px; height: 44px; background: white; color: var(--color-text); border: 1px solid #e7e5e4; border-radius: 50%; cursor: pointer; opacity: 0; visibility: hidden; transition: all 0.3s; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 100; }
     .back-to-top.visible { opacity: 1; visibility: visible; }
     .back-to-top:hover { background: var(--color-text); color: white; border-color: var(--color-text); }
     
