Fixed:  The viewed tracking scripts have the correct PROJECT_ID, but the main widget JavaScript has wrong values on 5 pages. Here are the fixes needed: PageCurrentShould Beresolute-services.html'xacteched' / 'XactechED Campaign''resolute' / 'Resolute Services'palmview-lab.html'xacteched' / 'XactechED Campaign''palmview' / 'Palmview Lab'healthcare-dashboard.html'xacteched' / 'XactechED Campaign''dashboard' / 'Healthcare Operations Dashboard'gardner-chiropractic.html'xacteched' / 'XactechED Campaign''gardner' / 'Gardner Chiropractic'arizona-esthetics.html'xacteched' / 'XactechED Campaign''arizona' / 'Arizona Esthetics Institute'
Fixed:  The viewed tracking scripts have the correct PROJECT_ID, but the main widget JavaScript has wrong values on 5 pages. Here are the fixes needed:
PageCurrentShould Beresolute-services.html'xacteched' / 'XactechED Campaign''resolute' / 'Resolute Services'palmview-lab.html'xacteched' / 'XactechED Campaign''palmview' / 'Palmview Lab'healthcare-dashboard.html'xacteched' / 'XactechED Campaign''dashboard' / 'Healthcare Operations Dashboard'gardner-chiropractic.html'xacteched' / 'XactechED Campaign''gardner' / 'Gardner Chiropractic'arizona-esthetics.html'xacteched' / 'XactechED Campaign''arizona' / 'Arizona Esthetics Institute'

--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -435,7 +435,7 @@
         <div class="deliverable-card"><img src="images/arizona-esthetics-buildout.jpg" alt="Christie Stephenson standing in front of Arizona Esthetics Institute sign during facility build-out"><div class="deliverable-info"><div class="deliverable-type">Physical Evidence</div><h3>Facility Build-Out in Progress</h3><p>That's me, standing in front of the Arizona Esthetics Institute sign during construction. Sawhorses, HVAC materials, and all. This wasn't a consulting gig—<strong>I co-founded this school and built it from the ground up.</strong></p></div></div>
       </div>
       <div class="content-section"><h2 class="content-title">Deliverables Created</h2><div class="skill-grid"><div class="skill-card"><h4>📚 State-Approved Curriculum</h4><p>Complete esthetics program with lesson plans, competency frameworks, and assessments aligned to Arizona licensing requirements</p></div><div class="skill-card"><h4>📋 Instructional Materials</h4><p>Student handbooks, course materials, and practical training guides</p></div><div class="skill-card"><h4>✅ Assessment Frameworks</h4><p>Competency-based evaluations mapped to state licensing exam objectives</p></div><div class="skill-card"><h4>🤝 Partnership Agreements</h4><p>School district MOUs creating vocational pathways for at-risk youth</p></div><div class="skill-card"><h4>🏢 Facility Operations</h4><p>Complete facility build-out, equipment procurement, and compliance documentation</p></div><div class="skill-card"><h4>📣 Recruitment Materials</h4><p>Enrollment marketing, community outreach, and student recruitment systems</p></div></div></div>
-      <div class="content-section"><h2 class="content-title">The Pattern Continues</h2><div class="pattern-box"><p>Arizona Esthetics Institute (2003-2004) was the first time I built a complete educational program from scratch. A decade later, I would do it again with <a href="xacteched-campaign.html" style="color:#dc2626">XactechED at Xactware</a>.</p><p style="margin-top:1rem"><strong>Same pattern:</strong></p><p>→ Identify a skills gap</p><p>→ Create a program to address it</p><p>→ Navigate regulatory/funding requirements</p><p>→ Build awareness and drive enrollment</p><p>→ Deliver measurable results</p></div></div>
+      <div class="content-section"><h2 class="content-title">The Pattern Continues</h2><div class="pattern-box"><p>Arizona Esthetics Institute (2003-2004) was the first time I built a complete educational program from scratch. A decade later, I would do it again with <a href="xacteched-campaign.html" style="color:#dc2626">xactechED at Xactware</a>.</p><p style="margin-top:1rem"><strong>Same pattern:</strong></p><p>→ Identify a skills gap</p><p>→ Create a program to address it</p><p>→ Navigate regulatory/funding requirements</p><p>→ Build awareness and drive enrollment</p><p>→ Deliver measurable results</p></div></div>
       <div class="content-section"><h2 class="content-title">Results</h2><div class="glass-card"><ul class="content-list"><li><strong>State-approved curriculum</strong> meeting Arizona Board of Cosmetology requirements</li><li><strong>Accredited trade school</strong> launched and operational</li><li><strong>School district partnerships</strong> creating pathways for at-risk youth</li><li><strong>Students enrolled</strong> and progressing toward licensing exams</li><li><strong>Complete program infrastructure</strong>—curriculum, facility, operations, recruitment</li></ul><div class="tags"><span class="tag">Curriculum Development</span><span class="tag">Regulatory Navigation</span><span class="tag">Instructional Design</span><span class="tag">Partnership Building</span><span class="tag">Program Launch</span></div></div></div>
       <div class="content-section"><h2 class="content-title">Interactive Demo</h2><div class="demo-card" onclick="openDemo()"><div class="demo-icon"><svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg></div><div class="demo-text"><h3>Launch Interactive Demo</h3><p>Explore the Arizona Esthetics Institute curriculum and training materials</p></div></div></div>
       <div class="cta-section"><a href="index.html#work" class="btn-cta"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>View More Case Studies</a></div>
@@ -559,13 +559,13 @@
 <script>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_KEY = 'arizona';
+const CURRENT_PAGE_NAME = 'Arizona Esthetics Institute';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
