--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -660,13 +660,13 @@
 </div>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_KEY = 'gardner';
+const CURRENT_PAGE_NAME = 'Gardner Chiropractic';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
