--- a/palmview-lab.html
+++ b/palmview-lab.html
@@ -437,7 +437,7 @@
       </div>
       <div class="content-section"><h2 class="content-title">Deliverables</h2><div class="glass-card"><ul class="content-list"><li><strong>Knowledge base</strong> using Stack Overflow methodologies for searchable documentation</li><li><strong>Quick-reference guides</strong> for common procedures (device resets, Powerwash, troubleshooting)</li><li><strong>FAQs</strong> addressing frequently asked technical questions</li><li><strong>Troubleshooting articles</strong> enabling self-service resolution</li><li><strong>Inventory systems</strong> tracking devices across multiple platforms</li><li><strong>Onboarding documentation</strong> for newly hired technical staff</li></ul></div></div>
       <div class="content-section"><h2 class="content-title">Results</h2><div class="glass-card"><ul class="content-list"><li><strong>Reduced repeat support requests</strong> through self-service documentation</li><li><strong>Improved onboarding</strong> for new technical staff with ready-made resources</li><li><strong>Teacher enablement</strong> on interactive display technology</li><li><strong>Systematic inventory management</strong> across Windows, Chromebook, and iOS platforms</li><li><strong>Documentation that outlasted my role</strong>—built to be maintainable</li></ul><div class="tags"><span class="tag">Knowledge Base Design</span><span class="tag">Technical Documentation</span><span class="tag">Quick Reference Guides</span><span class="tag">User Enablement</span><span class="tag">Inventory Management</span><span class="tag">Multi-Platform Support</span></div></div></div>
-      <div class="pattern-box"><p><strong>The Pattern:</strong> Just like with <a href="xacteched-campaign.html">XactechED</a> and <a href="arizona-esthetics.html">Arizona Esthetics Institute</a>, I identified a gap, built systems to address it, and created resources that enabled others to succeed. The scale and context change—the approach doesn't.</p></div>
+      <div class="pattern-box"><p><strong>The Pattern:</strong> Just like with <a href="xacteched-campaign.html">xactechED</a> and <a href="arizona-esthetics.html">Arizona Esthetics Institute</a>, I identified a gap, built systems to address it, and created resources that enabled others to succeed. The scale and context change—the approach doesn't.</p></div>
       <div class="content-section"><h2 class="content-title">Interactive Demo</h2><div class="demo-card" onclick="openDemo()"><div class="demo-icon"><svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg></div><div class="demo-text"><h3>Launch Interactive Demo</h3><p>Explore the Palmview K-8 knowledge base and documentation system</p></div></div></div>
       <div class="cta-section"><a href="index.html#work" class="btn-cta"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>View More Case Studies</a></div>
     </div></section>
@@ -559,13 +559,13 @@
 </div>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_KEY = 'palmview';
+const CURRENT_PAGE_NAME = 'Palmview Lab';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
