--- a/healthcare-dashboard.html
+++ b/healthcare-dashboard.html
@@ -765,13 +765,13 @@
 </div>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_KEY = 'dashboard';
+const CURRENT_PAGE_NAME = 'Healthcare Operations Dashboard';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
