--- a/resolute-services.html
+++ b/resolute-services.html
@@ -563,13 +563,13 @@
 <script>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_KEY = 'resolute';
+const CURRENT_PAGE_NAME = 'Resolute Services';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
