--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XactechED Campaign | Christie Stephenson Saavedra</title>
+  <title>xactechED Campaign | Christie Stephenson Saavedra</title>
   <meta name="description" content="Workforce development program case study - $200,000 grant secured for statewide coding education.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -478,7 +478,7 @@
 <body>
   <div class="page-wrapper">
     <nav class="nav" id="nav"><div class="nav-bg"><div class="nav-container"><a href="index.html#work" class="nav-back"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>Back to Portfolio</a><a href="index.html" class="nav-logo">Christie Stephenson Saavedra</a></div></div></nav>
-    <section class="hero"><div class="hero-container"><div class="hero-meta"><span class="hero-role">Training Manager</span><span class="hero-org">Xactware</span></div><h1 class="hero-title">XactechED Workforce Development Campaign</h1><p class="hero-summary">How I identified a training gap and built a statewide coding education program from scratch—securing $200,000 in state funding.</p><div class="results-banner"><div class="result-card"><div class="result-number">$200K</div><div class="result-label">State Grant Secured</div></div><div class="result-card"><div class="result-number">7 mo</div><div class="result-label">Concept to Launch</div></div><div class="result-card"><div class="result-number">1</div><div class="result-label">New MTECH Program</div></div></div></div></section>
+    <section class="hero"><div class="hero-container"><div class="hero-meta"><span class="hero-role">Training Manager</span><span class="hero-org">Xactware</span></div><h1 class="hero-title">xactechED Workforce Development Campaign</h1><p class="hero-summary">How I identified a training gap and built a statewide coding education program from scratch—securing $200,000 in state funding.</p><div class="results-banner"><div class="result-card"><div class="result-number">$200K</div><div class="result-label">State Grant Secured</div></div><div class="result-card"><div class="result-number">7 mo</div><div class="result-label">Concept to Launch</div></div><div class="result-card"><div class="result-number">1</div><div class="result-label">New MTECH Program</div></div></div></div></section>
     <section class="content"><div class="content-container">
       <div class="content-section"><h2 class="content-title">The Challenge</h2><div class="glass-card"><p class="content-text">As Training Manager at Xactware, I noticed a critical gap: there was no structured pathway for developing web development talent. The company needed skilled coders, but no local training program existed to build that pipeline.</p><p class="content-text">Rather than wait for someone else to solve it, I took initiative.</p><ul class="content-list"><li>No existing training program for web development talent</li><li>Needed to secure state funding through competitive grant process</li><li>Required building partnerships with educational institutions</li><li>Had to create awareness and drive enrollment from scratch</li></ul></div></div>
       <div class="content-section"><h2 class="content-title">What I Built</h2><p class="content-text" style="margin-bottom:2rem">Over 7 months, I independently conceived, developed, and launched a complete workforce development initiative—including brand identity, curriculum, partnerships, and promotional materials.</p>
@@ -486,7 +486,7 @@
         <!-- Side-by-side: Flyer and Landing Page -->
         <div class="deliverables-row">
           <div class="deliverable-card-half">
-            <img src="images/xacteched-flyer.png" alt="XactechED marketing flyer">
+            <img src="images/xacteched-flyer.png" alt="xactechED marketing flyer">
             <div class="deliverable-info">
               <div class="deliverable-type">Marketing Materials</div>
               <h3>Program Flyer</h3>
@@ -494,7 +494,7 @@
             </div>
           </div>
           <div class="deliverable-card-half">
-            <img src="images/xacteched-landing-page.png" alt="XactechED Landing Page">
+            <img src="images/xacteched-landing-page.png" alt="xactechED Landing Page">
             <div class="deliverable-info">
               <div class="deliverable-type">Lead Generation</div>
               <h3>Program Landing Page</h3>
@@ -505,7 +505,7 @@
         
         <!-- Foundation: Billboard -->
         <div class="deliverable-card-foundation">
-          <img src="images/xacteched-billboard.png" alt="XactechED Billboard">
+          <img src="images/xacteched-billboard.png" alt="xactechED Billboard">
           <div class="deliverable-info">
             <div class="deliverable-type">Promotional Signage</div>
             <h3>Program Billboard</h3>
@@ -520,21 +520,21 @@
         
       </div>
       <div class="content-section"><h2 class="content-title">Data-Driven Messaging</h2><p class="content-text">I developed stakeholder-facing content using local labor market data to build urgency:</p><div class="stats-box"><p><strong>2,000</strong> job openings next year for coders</p><p><strong>40</strong> tech businesses who will hire those coders</p><p><strong>7 of 10</strong> job openings in Utah are coding related</p><p><strong>NEEDED:</strong> People who can write code now</p></div></div>
-      <div class="content-section"><h2 class="content-title">Expanding the Ecosystem: à la code</h2><p class="content-text">XactechED wasn't my only workforce development initiative. I also created <strong>à la code</strong>, a community meetup for internal education and external recruitment.</p><div class="logo-grid"><div class="logo-card"><img src="images/xacteched-logo.png" alt="XactechED Logo"><div class="deliverable-type">External Program</div><h4>XactechED</h4><p>State-funded workforce pipeline through MTECH partnership</p></div><div class="logo-card"><img src="images/alacode-logo.png" alt="à la code Logo"><div class="deliverable-type">Community Meetup</div><h4>à la code</h4><p>Internal education & external recruitment outreach</p></div></div>
-        <div class="deliverable-card"><img src="images/office-door.png" alt="Office door showing XactechED branding" style="max-width:600px;margin:0 auto;display:block"><div class="deliverable-info" style="text-align:center"><div class="deliverable-type">Physical Evidence</div><h3>My Office at Xactware</h3><p>Both program logos on my door, with my nameplate: <strong>"Christie Stephenson, Training Manager, XACTECH ED"</strong></p><p style="font-size:0.85rem;color:var(--color-text-secondary);margin-top:0.5rem">These weren't side projects—I owned them.</p></div></div>
+      <div class="content-section"><h2 class="content-title">Expanding the Ecosystem: à la code</h2><p class="content-text">xactechED wasn't my only workforce development initiative. I also created <strong>à la code</strong>, a community meetup for internal education and external recruitment.</p><div class="logo-grid"><div class="logo-card"><img src="images/xacteched-logo.png" alt="xactechED Logo"><div class="deliverable-type">External Program</div><h4>xactechED</h4><p>State-funded workforce pipeline through MTECH partnership</p></div><div class="logo-card"><img src="images/alacode-logo.png" alt="à la code Logo"><div class="deliverable-type">Community Meetup</div><h4>à la code</h4><p>Internal education & external recruitment outreach</p></div></div>
+        <div class="deliverable-card"><img src="images/office-door.png" alt="Office door showing xactechED branding" style="max-width:600px;margin:0 auto;display:block"><div class="deliverable-info" style="text-align:center"><div class="deliverable-type">Physical Evidence</div><h3>My Office at Xactware</h3><p>Both program logos on my door, with my nameplate: <strong>"Christie Stephenson, Training Manager, XACTECH ED"</strong></p><p style="font-size:0.85rem;color:var(--color-text-secondary);margin-top:0.5rem">These weren't side projects—I owned them.</p></div></div>
       </div>
-      <div class="content-section"><h2 class="content-title">Timeline</h2><div class="timeline"><div class="timeline-item"><div class="timeline-date">Late 2014</div><div class="timeline-content">Identified workforce training gap; began researching funding opportunities</div></div><div class="timeline-item"><div class="timeline-date">Early 2015</div><div class="timeline-content">Developed XactechED brand, curriculum, and partnership strategy</div></div><div class="timeline-item"><div class="timeline-date">Spring 2015</div><div class="timeline-content">Presented to governor's committee; secured $200,000 UCAP grant</div></div><div class="timeline-item"><div class="timeline-date">June 2015</div><div class="timeline-content">Program launched through MTECH partnership</div></div></div><div class="quote-box"><p>It is official and I can finally announce! The program I have been building for the past 7 months has arrived!</p><span class="quote-source">— My announcement post, June 9, 2015</span></div></div>
+      <div class="content-section"><h2 class="content-title">Timeline</h2><div class="timeline"><div class="timeline-item"><div class="timeline-date">Late 2014</div><div class="timeline-content">Identified workforce training gap; began researching funding opportunities</div></div><div class="timeline-item"><div class="timeline-date">Early 2015</div><div class="timeline-content">Developed xactechED brand, curriculum, and partnership strategy</div></div><div class="timeline-item"><div class="timeline-date">Spring 2015</div><div class="timeline-content">Presented to governor's committee; secured $200,000 UCAP grant</div></div><div class="timeline-item"><div class="timeline-date">June 2015</div><div class="timeline-content">Program launched through MTECH partnership</div></div></div><div class="quote-box"><p>It is official and I can finally announce! The program I have been building for the past 7 months has arrived!</p><span class="quote-source">— My announcement post, June 9, 2015</span></div></div>
       <div class="content-section"><h2 class="content-title">Press Coverage</h2>
         <div class="press-card"><div class="deliverable-type">KSL News, June 2014</div><h3>"Stay-at-home mom developers break glass ceiling"</h3><blockquote>"One such mom is Christie Stephenson, a Utah native with six children who is a strong advocate for women in technology..."</blockquote><blockquote>"'It's one of the coolest professions anyone could ever get into, and I want all of my girls to be programmers,' she said."</blockquote><a href="https://www.ksl.com/article/30451444" target="_blank">Read full article →</a></div>
         <div class="press-card"><div class="deliverable-type">MTECH Official Announcement, September 2015</div><h3>"MTECH and XACTWARE Partner for Web Programming"</h3><blockquote>"'The field of developers is in such high demand that we hope they actually finish the course before they get hired on.'"<span style="display:block;font-style:normal;font-size:0.85rem;margin-top:0.5rem">— Lisa Birch, Director of Programs, MTECH</span></blockquote><a href="https://mtec.edu/news/matc-and-xactware-partner/" target="_blank">Read full article →</a></div>
-        <div class="press-card"><div class="deliverable-type">Utah System of Higher Education, April 2015</div><h3>"UCAP announces $3.45M in 2015 grant funding"</h3><p style="font-size:0.9rem;color:var(--color-text-secondary);margin-top:0.75rem"><em>The XactechED program successfully competed for and received $200,000 from this funding cycle.</em></p><a href="https://ushe.edu/utah-cluster-acceleration-partnership-announces-3-45m-in-2015-grant-funding-available/" target="_blank">Read full article →</a></div>
+        <div class="press-card"><div class="deliverable-type">Utah System of Higher Education, April 2015</div><h3>"UCAP announces $3.45M in 2015 grant funding"</h3><p style="font-size:0.9rem;color:var(--color-text-secondary);margin-top:0.75rem"><em>The xactechED program successfully competed for and received $200,000 from this funding cycle.</em></p><a href="https://ushe.edu/utah-cluster-acceleration-partnership-announces-3-45m-in-2015-grant-funding-available/" target="_blank">Read full article →</a></div>
       </div>
       <div class="content-section"><h2 class="content-title">What Others Say</h2>
         <div class="testimonial-card"><div class="deliverable-type">Letter of Recommendation</div><h3>Tim Harrison, Technical Project Manager, MNTN</h3><p style="font-size:0.85rem;color:var(--color-text-secondary);margin-bottom:1rem">Former colleague at Xactware/Verisk, 2014-2015</p><blockquote>"In just one year, Christie advanced from Quality Assurance Analyst to Training Manager, where she <strong>designed and launched the MTECH Web Development program</strong>—a proprietary curriculum that <strong>secured a $200,000 UCAP grant</strong> through her compelling presentation to the governor's committee."</blockquote><blockquote>"In addition to fulfilling her standard job requirements as an analyst, she <strong>tirelessly and enthusiastically developed this program from scratch</strong>."</blockquote></div>
         <div class="testimonial-card"><div class="deliverable-type">Xactware Colleagues, 2015</div><h3>Additional References</h3><blockquote>"There aren't many people I have encountered who have had <strong>as much impact in as short of a time</strong> as Christine had here."<span style="display:block;font-style:normal;font-size:0.85rem;margin-top:0.5rem">— Kevin Carpenter, QA Manager</span></blockquote><blockquote>"She is as good as anyone at <strong>mapping out a vision or strategy</strong> and the first to be at the front lines doing whatever work is needed."<span style="display:block;font-style:normal;font-size:0.85rem;margin-top:0.5rem">— David Nelson, Marketing Manager</span></blockquote></div>
       </div>
       <div class="content-section"><h2 class="content-title">Results</h2><div class="glass-card"><ul class="content-list"><li><strong>$200,000 UCAP grant secured</strong> through competitive state funding process</li><li><strong>MTECH Web Development program launched</strong> creating sustainable talent pipeline</li><li><strong>Educational partnership established</strong> between Xactware and MTECH</li><li><strong>Complete program infrastructure built</strong> including brand, curriculum, marketing, and enrollment systems</li></ul><div class="tags"><span class="tag">Stakeholder Engagement</span><span class="tag">Executive Presentations</span><span class="tag">Visual Communication</span><span class="tag">Curriculum Development</span><span class="tag">Partnership Building</span></div></div></div>
-      <div class="content-section"><h2 class="content-title">Interactive Demo</h2><div class="demo-card" onclick="openDemo()"><div class="demo-icon"><svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg></div><div class="demo-text"><h3>Launch Interactive Demo</h3><p>Explore the XactechED training platform and curriculum materials</p></div></div></div>
+      <div class="content-section"><h2 class="content-title">Interactive Demo</h2><div class="demo-card" onclick="openDemo()"><div class="demo-icon"><svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg></div><div class="demo-text"><h3>Launch Interactive Demo</h3><p>Explore the xactechED training platform and curriculum materials</p></div></div></div>
       <div class="cta-section"><a href="index.html#work" class="btn-cta"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>View More Case Studies</a></div>
     </div></section>
     <div class="demo-modal" id="demoModal" onclick="closeDemo(event)"><div class="demo-modal-content" onclick="event.stopPropagation()"><button class="demo-close" onclick="closeDemo()">&times;</button><div class="demo-placeholder"><svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"/><line x1="8" y1="21" x2="16" y2="21"/><line x1="12" y1="17" x2="12" y2="21"/></svg><h3>Demo Coming Soon</h3><p>The interactive demo for this project is currently being developed.</p></div></div></div>
@@ -576,7 +576,7 @@
     <div id="thisPageContent">
       <div class="sticky-project">
         <div class="sticky-project-label">Currently Viewing</div>
-        <div class="sticky-project-name" id="currentProjectName">XactechED Campaign</div>
+        <div class="sticky-project-name" id="currentProjectName">xactechED Campaign</div>
       </div>
       <div class="sticky-body">
         <textarea class="sticky-textarea" id="noteTextarea" placeholder="Questions, observations, things to discuss with Christie..." oninput="saveNote()"></textarea>
@@ -625,12 +625,12 @@
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
 const CURRENT_PAGE_KEY = 'xacteched';
-const CURRENT_PAGE_NAME = 'XactechED Campaign';
+const CURRENT_PAGE_NAME = 'xactechED Campaign';
 
 const PROJECT_NAMES = {
   'portfolio-home': 'Christie Saavedra Portfolio',
   'dashboard': 'Healthcare Operations Dashboard',
-  'xacteched': 'XactechED Campaign',
+  'xacteched': 'xactechED Campaign',
   'resolute': 'Resolute Services',
   'arizona': 'Arizona Esthetics Institute',
   'palmview': 'Palmview Lab',
