Fixed the form reset issue

--- a/index.html
+++ b/index.html
@@ -3470,7 +3470,7 @@
         <p class="contact-subtitle">I'm always interested in discussing new opportunities.</p>
         
         <!-- Contact Form -->
-      <form class="contact-form" action="https://formspree.io/f/xaqnyaaw" method="POST" target="_blank">
+      <form class="contact-form" action="https://formspree.io/f/xaqnyaaw" method="POST" target="_blank" onsubmit="setTimeout(() => this.reset(), 100)">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required placeholder="Your name">
