YOU secured $200K (your direct achievement) The PROGRAM you built has earned $521K+ total (validates your work's lasting impact) Completely honest and actually more impressive - you built something sustainable
YOU secured $200K (your direct achievement)
The PROGRAM you built has earned $521K+ total (validates your work's lasting impact)
Completely honest and actually more impressive - you built something sustainable

--- a/xacteched-case-study.html
+++ b/xacteched-case-study.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XactechED Case Study | Christie Stephenson Saavedra</title>
-  <meta name="description" content="Workforce development case study - $521K grant secured, state curriculum approval, 200+ students trained.">
+  <meta name="description" content="Workforce development case study - $200K grant secured, program has earned $521K+ total, 200+ students trained.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,8 +85,8 @@
     
     <div class="stats-grid">
       <div class="stat-card">
-        <div class="stat-number">$521K</div>
-        <div class="stat-label">Grants Secured</div>
+        <div class="stat-number">$200K</div>
+        <div class="stat-label">Grant I Secured</div>
       </div>
       <div class="stat-card">
         <div class="stat-number">200+</div>
@@ -141,7 +141,7 @@
     <section class="section">
       <h2 class="section-title">Key Outcomes</h2>
       <div class="section-content">
-        <p><strong>Documented Results:</strong> Program recognized by Utah System of Higher Education (USHE) board. Featured in local press coverage across Utah County. Created sustainable pipeline that continued after my departure.</p>
+        <p><strong>Documented Results:</strong> I secured the initial $200K UCAP grant; the program I built has since secured over $521K in total state funding. Recognized by Utah System of Higher Education (USHE) board. Featured in local press coverage across Utah County. Created sustainable pipeline that continued after my departure.</p>
         <p><strong>Student Impact:</strong> Graduates reported average starting salaries 40% above minimum wage. Several advanced to senior estimator roles within 2 years.</p>
       </div>
     </section>
